fix flicker selected item

--- a/src/components/Canvas/Canvas.scss
+++ b/src/components/Canvas/Canvas.scss
@@ -13,16 +13,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  justify-items: center;
 }
+
 .pix-content {
   cursor: grab;
   flex-grow: 1;
-  min-width: 50px;
+  min-width: 0;
   line-height: 0;
   text-align: center;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center;    
 }
 
 .pix-content-selected {
@@ -44,8 +46,21 @@
   border: 1px dotted #a5a5a5;
 }
 
+.pix-title-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .pix-title {
   cursor: grab;
+  flex-grow: 1;
+  min-width: 0;
+  line-height: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .pix-title-selected {
